compute.tf
resource "aws_instance" "web" {
  ami                         = "ami-0d87339b5127ec34f"
  instance_type               = "t2.micro"
  associate_public_ip_address = true

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [aws_security_group.public_http_traffic.id]
  root_block_device {
    delete_on_termination = true
    volume_size           = 10
    volume_type           = "gp2"
  }

  tags = merge(local.common_tags, {
    Name = "NGINX-Server-EC2"
  })

  lifecycle {
    create_before_destroy = true
  }
}


resource "aws_security_group" "public_http_traffic" {
  description = "Security group to allow traffic at port 443 and 80"
  name        = "Nginx_public_http_traffic"
  vpc_id      = aws_vpc.vpc.id

  tags = merge(local.common_tags, {
    Name = "NGINX-Server-SG"
  })
}

resource "aws_vpc_security_group_ingress_rule" "http" {
  security_group_id = aws_security_group.public_http_traffic.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "https" {
  security_group_id = aws_security_group.public_http_traffic.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}
